# apple-ocr

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  README.md  SECURITY.md  pyproject.toml  setup.cfg  setup.py
.github/: FUNDING.yml
apple_ocr/: __init__.py
src/apple_ocr/: __init__.py  ocr.py
src/ocr/apple/: __init__.py  ocr.py
